--- a/arch/x86/configs/wsl2_defconfig
+++ b/arch/x86/configs/wsl2_defconfig
@@ -89,9 +89,20 @@ CONFIG_RESET_ATTACK_MITIGATION=y
 CONFIG_KVM=y
 CONFIG_KVM_INTEL=y
 CONFIG_KVM_AMD=y
+CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 CONFIG_LTO_CLANG=y
+CONFIG_CFI_CLANG=y
 CONFIG_ARCH_MMAP_RND_BITS=32
+CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODVERSIONS=y
+CONFIG_MODULE_SRCVERSION_ALL=y
+CONFIG_MODULE_SIG_FORCE=y
+CONFIG_MODULE_SIG_SHA512=y
+# CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_BLK_DEV_BSGLIB=y
 CONFIG_BLK_CMDLINE_PARSER=y
 CONFIG_PARTITION_ADVANCED=y
@@ -470,17 +481,11 @@ CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY=y
 CONFIG_INIT_STACK_ALL=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_INIT_ON_FREE_DEFAULT_ON=y
-CONFIG_CRYPTO_RSA=y
 CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 # CONFIG_CRYPTO_DEV_VIRTIO is not set
-CONFIG_ASYMMETRIC_KEY_TYPE=y
-CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
-CONFIG_X509_CERTIFICATE_PARSER=y
-CONFIG_PKCS7_MESSAGE_PARSER=y
-CONFIG_SYSTEM_TRUSTED_KEYRING=y
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
 # CONFIG_XZ_DEC_IA64 is not set
